interpreter/examples/good/simple/function2.dl
{
    function f(ref x) {
        x = 123
    },
    int y,
    int z.

    z = f(y);
    print y
}
