interpreter/examples/bad/syntax/void_cast.dl
{
    function f(z) : return z.
    f(z)
}
